<resources>
    <string name="app_name">Numerical Analysis 2S</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_complete_table">completeTableActivity</string>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>
    <string name="hiding_row_sample">Hiding 3. Row Sample</string>
    <string name="showing_row_sample">Showing 3. Row Sample</string>
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string name="table_pagination_details">Page %s, showing items %s - %s.</string>
    <string name="multiplier">&#215;</string>
    <string name="div">&#247;</string>
    <string name="minus">&#45;</string>
    <string name="plus">&#43;</string>
    <string name="left">&#706;</string>
    <string name="right">&#707;</string>
    <string name="dot">&#803;</string>
    <string name="removeToLeft">&#9003;</string>
    <string name="xValue">&#120;</string>
    <string name="pi">&#960;</string>
    <string name="euler">&#101;</string>
    <string name="xSquareTwo">&#9634;&#178;</string>
    <string name="xSquareAny">&#120;&#8317;  &#8318;</string>
    <string name="xSquareRoot">&#8730;</string>
    <string name="leftParent">&#40;</string>
    <string name="rightParent">&#41;</string>
    <string name="absolute">&#9116;&#9634;&#9119;</string>
    <string name="cosInverse">cos&#8315;&#185;</string>
    <string name="sinInverse">sin&#8315;&#185;</string>
    <string name="tanInverse">tan&#8315;&#185;</string>
    <string name="secInverse">sec&#8315;&#185;</string>
    <string name="cotInverse">cot&#8315;&#185;</string>
    <string name="normalLog">log&#8321;&#8320;</string>
    <string name="log">log&#8333; &#8334;</string>
    <string name="epsilonRelativ">&#120576;</string>
    <string name="epsilonAbs">&#69;</string>
    <string name="tenSquared">10&#8317; &#8318;</string>




    <string name="superToastLibrary">
       <a href="https://github.com/JohnPersano/SuperToasts">SuperToasts</a>
        by John Persano
    </string>
    <string name="evalExLibrary">
       <a href="https://github.com/uklimaschewski/EvalEx">EvalEx</a>
        by Udo Klimaschewski
    </string>
    <string name="graphLibrary">
       <a href="http://www.android-graphview.org/">GraphView</a>
        by Jonas Grehring
    </string>
    <string name="tableViewLibrary">
       <a href="https://github.com/evrencoskun/TableView">TableView</a>
        by Evren Coşkun
    </string>
    <string name="mathComplexLibrary">
       <a href="http://commons.apache.org/proper/commons-math/javadocs/api-3.6/org/apache/commons/math3/complex/Complex.html">MathComplex</a>
        by Apache
    </string>
    <string name="MathViewLibrary">
       <a href="https://github.com/kexanie/MathView/">MathView</a>
        by Hour Glass
    </string>
    <string name="symjaLibrary">
       <a href="https://github.com/axkr/symja_android_library">Symja</a>
        by Axel Kramer
    </string>

    <string name="githubOficial">
       <a href="https://github.com/sebospc/numericoV4">Github Official Project</a>
    </string>

    <string-array name="items_per_page">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>All</item>
    </string-array>

</resources>
